cargo-features = ["named-profiles"]

[workspace]
members = [
    "solar",
    "program",
    "program-so",
    "disassembler",
    "wasm-client",
    "solana-api-types",
    "jsonrpc-client"
]

[profile.bpf-release]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
overflow-checks = false
# debug = true
