cargo-features = ["named-profiles"]

[workspace]
members = [
  "cli",
  "disassembler",
  "wasm-client",
  "solana-api-types",
  "jsonrpc-client",
  "solar",
  "solar-macros",
]
# Excluded b/c it's easier to control what dependencies these crates
# have and what dependencies they don't have.
exclude = [
  "program",
  "program-so",
  "locker",
  "anchor-workspace"
]

[profile.bpf-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 3
overflow-checks = false
# debug = true
