[package]
edition = "2018"
name = "solana-rpc-client"
version = "0.1.0"

[features]
# wasm = ["reqwest/js"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bs58 = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
solana-api-types = { path = "../solana-api-types", default-features = false, features = ["offchain"] }
async-std = { version = "1.10", features = ["unstable"] }
parking_lot = "0.11"
base64 = "0.12"
log = "0.4"
