[package]
edition = "2018"
name = "token-locker-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
async-std = { version = "1.10", features = ["tokio1", "attributes"] }
anyhow = "1"
serde = "1"
serde_json = "1"
env_logger = "0.9"
parity-scale-codec = {version = "1.3.7", features = ["derive"]}

solana-api-types = {path = "../solana-api-types", feature = ["crypto", "extended"]}
solar = {path = "../solar", features = ["sol-mem-intrinsics", "offchain", "native"]}
token-locker = {path = "../locker"}
solana-rpc-client = { path = "../jsonrpc-client" }
solar-macros = {path = "../solar-macros"}
