[package]
edition = "2018"
name = "token-locker-so"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solar = {path = "../solar", features = ["onchain"]}
token-locker = {path = "../locker", features = ["onchain"]}

[lib]
crate-type = ["cdylib"]
name = "locker"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
overflow-checks = false
