[package]
name = "x5margin-program"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

solana-program = "1.7.2"
num_enum = "0.5"
static_assertions = "1.1.0"
borsh = "0.9.1"
az = "1.1.1"
num-traits = "0.2.14"

solar-macros = { path = "../solar-macros" }
solar = { path = "../solar", features = ["sol-mem-intrinsics"] }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
chrono = { version = "0.4.19", default-features = false }
fixed = { version = "1.9.0", features = ["num-traits"] }
parity-scale-codec = { version = "1.3.7", features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.7.2"
solana-sdk = "1.7.2"
tokio = "1.8"
anyhow = "1"