[package]
edition = "2018"
name = "solar"
version = "0.1.0"

[features]
onchain = ["solana-api-types/onchain"]
runtime-test = ["solana-program-test", "test"]
sol-mem-intrinsics = []
test = ["solana-sdk", "solana-program"]

[dependencies]
# anyhow = {version = "1", default-features = false}
async-trait = "0.1.51"
az = "1.1.1"
borsh = "0.9.1"
byteorder = "1.4.3"
chrono = {version = "0.4.19", default-features = false}
fixed = {version = "1.9.0", features = ["num-traits"]}
itoap = "1.0.1"
lazy_static = "1.4"
minicbor = {version = "0.8.1", features = ["derive"]}
num-traits = "0.2.14"
parity-scale-codec = {version = "1.3.7", features = ["derive"]}
serde = "1.0"
static_assertions = "1.1.0"
strum = {version = "0.21", features = ["derive"]}
url = "2.2.2"

solana-api-types = {path = "../solana-api-types", default-features = false}
solar-macros = {path = "../solar-macros"}

solana-program = {version = "= 1.7.2", optional = true}
solana-program-test = {version = "= 1.7.2", optional = true}
solana-sdk = {version = "= 1.7.2", optional = true}

[dev-dependencies]
solana-sdk = "= 1.7.2"
