[package]
edition = "2018"
name = "platinum-margin-tool-client"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
bs58 = "0.4"
console_log = "0.2"
futures = "0.3"
js-sys = "0.3"
log = "0.4"
parity-scale-codec = {version = "1.3.7"}
reqwest = "0.11"
serde = {version = "^1.0", features = ["derive"]}
serde_derive = "^1.0"
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"

solana-api-types = {path = "../solana-api-types"}
solar = {path = "../solar"}
token-locker = {path = "../locker"}
x5margin-program = {path = "../program"}

[dev-dependencies]
tokio = {version = "1.0", features = ["rt", "macros"]}
