[package]
edition = "2018"
name = "wasm-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
console_log = "0.2"
futures = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
log = "0.4"
parity-scale-codec = { version = "1.3.7" }
reqwest = "0.11"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
getrandom1 = { package = "getrandom", version = "0.1.16", features = ["wasm-bindgen"] }

async-std = { version = "1.10", features = ["unstable", "alloc", "std"] }

solana-rpc-client = { path = "../jsonrpc-client" }
solana-api-types = { path = "../solana-api-types", default-features = false, features = ["offchain", "crypto"] }
solar = { path = "../solar", features = ["offchain", "wasm"] }
x5margin-program = { path = "../program" }
token-locker = { path = "../locker", features = ["offchain"] }

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
