[package]
edition = "2018"
name = "pool-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.17"
solana-sdk = "1.7.11"

anyhow = "1.0"
rand = "0.7"
shellexpand = "2.1"
structopt = "0.3"

pool = {path = "../../programs/pool", features = ["no-entrypoint"]}
